# netopeer

./: .gitignore  .travis.yml  AccessControl.md  Dockerfile  NETCONFOverTLS.md  NetopeerConfiguration.md  NetopeerServer.md  ProjectHome.md  README.md  SSHDaemonSettings.md  SingleLevelServer.md  cfgsystem.md  cov-configure.sh  cov-gen-tgz.sh  cov-make.sh
cli/: Makefile  Makefile.in  README  commands.c  commands.h  config.status  configuration.c  configuration.h  configure  configure.in  main.c  mreadline.c  netopeer-cli  netopeer-cli.spec  netopeer-cli.spec.in  netopeer-test.yang  readinput.c  readinput.h  test.c  test.h
cli/certificates/: rootCA.pem
cli/doc/: netopeer-cli.1  netopeer-cli.1.html
cli/tests/: README  netopeer-test.yang
cli/tests/all YANG keywords/: README  aug-sub-mod1.yang  basic_tests.xml  main-mod.yang  main-mod2.yang  sub-mod1.yang  sub-mod2.yang
cli/tests/anyxml/: README  anyxml-mod.yang  feat1_feat2_features.xml  feat1_features.xml  no_features.xml
cli/tests/basic tests/: README  aug-sub-mod1.yang  basic_tests.xml
cli/tests/choice/: README  choice-mod.yang  feat1_features.xml  no_features.xml
cli/tests/container/: README  container-mod.yang  feat1_features.xml  no_features.xml
server/: Doxyfile  Makefile  Makefile.in  README  config.status  configure  configure.in  netopeer-agent  netopeer-agent.1  netopeer-agent.1.html  netopeer-server  netopeer-server.8  netopeer-server.8.html  netopeer-server.spec  netopeer-server.spec.in  netopeer.rc  netopeer.rc.in  restconf-example-modules-bad.sh  restconf-example-modules-get.sh  restconf-example-modules-ietf-system-schema.sh  restconf-example-modules-ietf-system.sh  restconf-example-modules-unimplemented.sh  restconf-example-simple-get.sh  restconf-example-simple-post.sh  restconf-example-version-get.sh
server-sl/: Makefile.in  configure  configure.in  main.c
server-sl/toaster/: Makefile.in  configure  configure.in  toaster-data.rng  toaster-gdefs.rng  toaster-schematron.xsl  toaster.c  toaster.paths  toaster.yang  toaster.yin
server/agent/: Makefile.in  agent.c
server/certs/: client.crt  server.crt
server/config/: NETCONF-server.xml  NETCONF-server.xml.in  NETCONF-server.xml.tmp  Netopeer.xml  Netopeer.xml.in  Netopeer.xml.tmp  datastore.xml  ietf-netconf-server-config.rng  ietf-netconf-server-data.rng  ietf-netconf-server-data.rng.in  ietf-netconf-server-gdefs-config.rng  ietf-netconf-server-gdefs.rng  ietf-netconf-server-schematron.xsl  ietf-netconf-server.yang  ietf-netconf-server.yin  netopeer-cfgnetopeer-config.rng  netopeer-cfgnetopeer-data.rng  netopeer-cfgnetopeer-data.rng.in  netopeer-cfgnetopeer-gdefs-config.rng  netopeer-cfgnetopeer-gdefs.rng  netopeer-cfgnetopeer-schematron.xsl  netopeer-cfgnetopeer.yang  netopeer-cfgnetopeer.yin  org.liberouter.netopeer.conf  org.liberouter.netopeer.conf.in  org.liberouter.netopeer.server.service  org.liberouter.netopeer.server.service.in  org.liberouter.netopeer2.conf  org.liberouter.netopeer2.conf.in  org.liberouter.netopeer2.server.service  org.liberouter.netopeer2.server.service.in  stunnel_config.in
server/configurator/: README  netopeer-configurator  netopeer-configurator.1  netopeer-configurator.1.html  netopeer-configurator.py  setup.py
server/configurator/modules/: __init__.py  config.py  config.py.in  dbus.py  messages.py  nacm.py  nc_module.py  netopeer.py  sock.py  sshd.py
server/configurator/netopeer/: __init__.py  cacerts.py  config.py  config.py.in  crls.py  dbus.py  nacm.py  nc_cacerts.py  nc_crls.py  nc_dbus.py  nc_module.py  nc_nacm.py  nc_netopeer.py  nc_servcert.py  nc_sock.py  nc_sshauth.py  nc_tlsauth.py  ncmodule.py  netopeer.py  servcert.py  sock.py
server/dm_manager/: Makefile.in  manager.c
server/manager/: Makefile.in  netopeer-manager  netopeer-manager.1  netopeer-manager.1.html  netopeer-manager.in  netopeer-manager.tmp
server/src/: agent.c  agent_comm.c  agent_comm_dbus.c  agent_comm_socket.c  cfgnetopeer-transapi.c  cfgnetopeer_transapi.c  cfgnetopeer_transapi.h  comm.h  comm_socket.c  common.c  config.h  config.h.in  converter.c  converter.h  converter_example.c  device_module_interface.h  http_parser.c  http_parser.h  netconf-server-transapi.c  netconf_server_transapi.c  netconf_server_transapi.h  netopeer-cfgnetopeer.c  netopeer_dbus.c  netopeer_dbus.h  netopeer_operations.h  netopeer_socket.h  netopeer_socket.h.in  restconf-agent.c  server.c  server.h  server2.c  server_comm_dbus.c  server_comm_socket.c  server_modules.c  server_operations.c  server_operations.h  server_operations_dbus.c  server_operations_dbus.h  server_sessions.c  server_ssh.c  (+6 more)
server/src/openwrt/: Makefile.ietf-system  Makefile.ietf-system.in  date_time.c  (+11 more)
server/stunnel/: README  ca_rootCA.pem  client.c.patch  client.crt  client.key  client.pem  options.c.patch  rootCA.key  rootCA.pem  rootCA.srl  server.crt  server.key  server.pem  stunnel.conf.in  stunnel_netconf.patch  stunnel_netopeer.patch  verify.c.patch
server/test-resources/: ietf-netconf-monitoring.yang  ietf-system-tls-auth.yang  ietf-system.yang  ietf-x509-cert-to-name.yang  json-request.json  sample-yang-1.yang  sample-yang-2.yang  sample-yang-3.yang  system-response-full.xml  system-response.xml
transAPI/cfginterfaces/: Makefile.in  README  cfginterfaces-init.c  cfginterfaces.c  cfginterfaces.c.in  cfginterfaces.h  cfginterfaces_paths.txt  config.h.in  configure  configure.in  iface_if.c  iface_nm.c  interfaces.c
transAPI/cfgsystem/: Makefile.in  README  cfgsystem-init.c  cfgsystem.c  cfgsystem_paths.txt  configure  configure.in  datastore.xml
transAPI/turing/: Makefile.in  README  configure  configure.in  install-sh  paths  turing-machine-config.rng.in  turing-machine-data.rng.in  turing-machine-gdefs-config.rng  turing-machine-schematron.xsl  turing-machine.c  turing-machine.yang  turing-machine.yin
webgui/: AUTHORS  COPYING  Makefile.am  bootstrap.sh  configure.ac  netconfwebgui.spec.in
webgui/pyang/: Makefile.am  README  nmp.py  nmp.sh  resptempl.py  wyin.py
webgui/symfony_gui/: Makefile.am  netconfwebgui.conf.in  phpdoc.xml  rpmcopy  rpmmkdir
(+236 files in other folders)
